--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,4 +76,6 @@ workflows:
                 gemfile: rails_5_2.gemfile
               - ruby_version: "2.5"
                 gemfile: rails_7_0.gemfile
+              - ruby_version: "2.5"
+                gemfile: rails_git.gemfile
           name: test-ruby-<<matrix.ruby_version>>-<<matrix.gemfile>>
